reformatted websocket code
Signed-off-by: Greg Wilkins <gregw@webtide.com>