@@ -61,7 +61,7 @@ public class AnnotatedClientEndpointConfig implements ClientEndpointConfig
         {
             try
             {
-                this.configurator = anno.configurator().getDeclaredConstructor( ).newInstance();
+                this.configurator = anno.configurator().getDeclaredConstructor().newInstance();
             }
             catch (Exception e)
             {
@@ -70,7 +70,7 @@ public class AnnotatedClientEndpointConfig implements ClientEndpointConfig
                 err.append(anno.configurator().getName());
                 err.append(" defined as annotation in ");
                 err.append(anno.getClass().getName());
-                throw new InvalidWebSocketException(err.toString(),e);
+                throw new InvalidWebSocketException(err.toString(), e);
             }
         }
     }
